Revision history for {{$dist->name}}

{{$NEXT}}

1.102     2011-11-03 10:50:59 America/New_York
          an article's "package" is now called its "topic" -- this will break
          your advent calendar, if you exist and have written one

1.101     2011-11-02 14:03:13 America/New_York
          The style sheet is now a template, using Color::Palette for picking
          colors to use.  The default color palette was imported from the 2009
          RJBS Advent Calendar.  A new palette can be provided in the [Palette]
          config section.

          The "subtitle" option is now "tagline" to avoid ambiguities with the
          Article formatting.

1.100     2011-10-07 18:58:51 America/New_York
          The start_date and end_date parameters can be provided for periods
          other than Advent.  This feature is still young and has a bunch of
          arbitrary restrictions.  Among other things, the date range may not
          cross a month boundary.

          A "subtitle" option has been added for the text in the bar below the
          main title.

          The default templates will be used if custom templates are not found.

          The default templates no longer have "RJBS Advent Calendar"
          hardcoded.

          The default favicon is no longer "rjbs."  Instead, it's a nice little
          Christmas tree from http://www.favicon.cc/?action=icon&file_id=11923

          The default calendar template no longer displays a year and month
          label.

          The templates can now access the WWW::AdventCalendar object as
          $calendar.

          Like everybody else, I used DateTime math incorrectly.  The "days
          until the first door" only worked accurately if there was less than a
          month to go.  This has been fixed.

1.002     2011-08-04 10:13:00 America/New_York
          L<> links now go to metacpan by default

1.001     2010-12-08 09:21:11 America/New_York
          correct some encoding boundary bugs
